--- a/trybe-exercicios/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style5.css
+++ b/trybe-exercicios/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style5.css
@@ -19,10 +19,24 @@ ol.ordained-list li {
   font-weight: bold;
 }
 
-ul.programming-language li {
+.programming-language .blue {
   color: blue;
 }
-
+.programming-language .rosa {
+  color: pink;
+}
 ul.sites li:hover {
  font-weight: bold;
+}
+.sites .laranja:hover {
+ color: orange;
+}
+.sites .verde:hover {
+  color: green;
+}
+.sites .preta:hover {
+  color: black;
+}
+.sites .amarela:hover {
+  color: yellow;
 }
