--- a/trybe-exercicios/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style4.css
+++ b/trybe-exercicios/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style4.css
@@ -1,3 +1,31 @@
 div:hover {
   border-style: dotted;
 }
+div:nth-of-type(1) h3{
+  color: blue;
+  background-color: red;
+}
+div:nth-of-type(2) h3{
+  color: orange;
+  text-decoration:underline
+  
+}
+div:nth-of-type(3) h3{
+  color: green;
+  font-size: 20px;
+  text-decoration: line-through;
+}
+div:nth-of-type(4) h3{
+  color: black; 
+  text-decoration: overline;
+}
+div:nth-of-type(5) h3{
+  color:white;
+  background-color: brown;
+
+}
+
+div:nth-of-type(2n+1) h3 {
+  font-style: italic;
+
+}
