exercicio fetch api com redux

--- a/trybe-exercicios/front-end/secao-7-gerenciamento-de-estado-com-redux/dia-4-usando-redux-no-react-actions-assincronas/game-of-thunks/src/index.css
+++ b/trybe-exercicios/front-end/secao-7-gerenciamento-de-estado-com-redux/dia-4-usando-redux-no-react-actions-assincronas/game-of-thunks/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('https://i.pinimg.com/originals/64/36/b2/6436b23bcef3568af48677f1620d4d2d.jpg');
+  background-size: cover;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 code {
