--- a/trybe-exercicios/front-end/secao-7-gerenciamento-de-estado-com-redux/dia-4-usando-redux-no-react-actions-assincronas/game-of-thunks/src/App.css
+++ b/trybe-exercicios/front-end/secao-7-gerenciamento-de-estado-com-redux/dia-4-usando-redux-no-react-actions-assincronas/game-of-thunks/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.personagem-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* background-color: rgba(255, 255, 255, 0.5); */
 }
 
-.App-link {
-  color: #61dafb;
+.image {
+  width: 250px;
+  border-radius: 100%;
+  border: 2px black solid;
+  height: 250px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-container {
+  font-size: 20px;
+  margin-right: 60px;
+  margin-top: 30px;
+  font-weight: 700;
 }
+
+h2 {
+  text-align: center;
+  margin: 50px 0;
+}
+
+.tudo {
+  background-color: rgba(255, 255, 255, 0.5);
+  width:fit-content;
+  padding: 20px;
+  border-radius: 15px;
+}
+
